--- a/plan.html
+++ b/plan.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>test-1-2</title>
+    <title>test-1-2-2</title>
     <style>
         canvas {
             display: block;
